# rideshare

./: Cargo.toml  README.md  justfile
crates/events/: Cargo.toml  build.rs
crates/events/src/: lib.rs
crates/kafka/: Cargo.toml
crates/kafka/src/: consumer.rs  producer.rs
infra/: docker-compose.yml  justfile
infra/redis/: docker-compose.yml  justfile
infra/redpanda/: .env  docker-compose.yml  justfile
infra/redpanda/schemas/: driver-availability.proto  driver-location-update.proto  event-metadata.proto  ride-offer-response.proto  ride-offer.proto
infra/redpanda/scripts/: register-schemas.sh
infra/schemas/: ride-assignment.proto  ride-request.proto  trip-event.proto
infra/scripts/: install-rpk.sh  register-schemas.sh
service/api-service/: Cargo.toml
service/api-service/src/: handler.rs  main.rs  request.rs
service/driver-service/: Cargo.toml
service/driver-service/src/: main.rs
service/matching-service/: Cargo.toml
service/matching-service/src/: main.rs
service/trip-service/: Cargo.toml
service/trip-service/src/: main.rs
